style.css
@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans';


* {
	margin: 0;
	border: 0;
	padding: 0;
}

body {
  /* background: #F1F6F8; */
  background: black;
  font-family: sans-serif;
  margin: 0 auto;
}

p {
  font-family: 'Alegreya Sans', sans-serif;
  color: #95a5a6;
  font-size: 160%;
  line-height: 155%;
  padding: 3%;
  text-indent: 2%;
  text-align: justify;
}

h3 {
  font-size: 175%;
  line-height: 155%;
  font-weight: 500;
  color: white;
  text-align: center;
  text-transform: uppercase;
}
h2 {
  font-size: 210%;
  line-height: 170%;
  font-weight: 700;
  color: white;
  text-align: center;
  text-transform: uppercase;
}

a {
    color: #95a5a6;
    text-decoration: none;
    font-weight: bold;
}
a:hover {
  color: #C3D7Df;
}

img {
  display: block;
  margin: 0 auto;
  max-width: 100%;
  margin-bottom: -4px;
}

#wrapper {
  max-width: 1200px;
  margin: 0 auto;
}
#banner-wrapper {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 0 3% 0;
}
header {
  width: 100%;
  height: 100px;
  top:0;
  left:0;
}

/* Add when proper logo is found */
/* #logo {
  margin:20px;
  float: left;
  width: 200px;
  height: 60px ;
  background: url(img/icons/logo.png) no-repeat center;
} */

/* img/icons/nav-dark.png */
/* NAVIGATION CSS */

nav {
  float: right;
  padding: 25px 20px 0px 0px;
}
#menu-icon {
  display: hidden;
  width: 40px;
  height: 40px;
  background: url(img/icons/nav-dark.png) center
}
ul {
  list-style: none;
}
nav ul li {
  font-family: 'Alegreya Sans',sans-serif;
  font-size: 150%;
  display: inline-block;
  float: left;
  padding: 10px
}
nav ul li a {
  color: #95a5a6;
}
.current {
  color: #3F5767;
}
a:hover {
  color:#A5BDCD;
}
/* NAVIGATION CSS  END */

.slider {
  max-width: 1200px;
}
.slider1 img {
  width: 100%;
  max-width: 1200px;
  margin: 0 auto;
}

.slider .bx-wrapper .bx-controls-direction a {
  display: none;
}

/* Start Of 3 Column Icon */
.one-third {
  width: 33.33%;
  float: left;
  text-align: justify;
  text-align: center;
}

.icon-wrap {
  margin: 0 auto;
  width: 120px;
  height: 120px;
  border-radius: 125%;
  text-align: center;
  background: #95a5a6;
  margin-top: 8%;
  margin-bottom: 3%;
}

.icon-wrap i {
  text-align: center;
  color: black;
  font-size: 450%;
  padding: 20%;
}
/* End Of 3 Column Icon */

.left-col {
  float: left;
  margin: 0 auto;
  width: 60%;
  height: auto;
  padding: 1%
}

#resume-section{
  text-align: center;
  float: left;
  margin: 0 auto;
  width: 100%;
  height: auto;
  padding: 1%
}


/* ===========================================================================  */

.download-button {
  display: inline-block; /* 1 */
  padding: 15px 30px 15px 30px; /* 4 */
  color: #686868; /* 5 */
  text-decoration: none; /* 6 */
  border: 1px solid #E3E3E3; /* 7 */
  position: relative; /* 8 */
  transition: 0.15s; /* 9 */
}

.download-button:focus,
.download-button:hover {
  border-color: #E31A4C; /* 1 */
  outline: none; /* 2 */
}
.download-button:active {
  animation: enlight 0.5s;
}


/* ===========================================================================  */












.sidebar {
  float: right;
  margin: 0 auto;
  width: 23%;
  height: auto;
  padding: 1%;
}
#profile {
  opacity: .85;
}

.one-third-padding {
  width: 29%;
  float: left;
  margin:2% 2%;
  text-align: justify;
  padding-top: 5%;
}

.one-third-padding a {
  font-size: 175%;
  line-height: 155%;
  font-weight: 500;
  color: white;
  text-align: center;
  text-transform: uppercase;
  padding-left: 16%;
}
.one-third-padding a:hover {
  color: #A5BDCD;
}

.tech-icon-icon {
  width: 100%;
  float: left;
  padding: 5% 4% 7% 0%;
}
.tech {
  list-style-type: none;
  text-align: center;
}

.tech li {
  display: inline-flex;
  padding: 5% 5% 1% 1%;
}
.tech i {
  font-size: 400%;
  margin: 1%;
  padding: 5% 5% 5% 4%;
  color: #C3D7DF;
}


.clearfix-padding {
  clear: both;
  padding: 3%;
}

/* Start Contact Form */
#contact-form {
  padding: 3em 2em;
}

#contact-form h2 {
  font-size: 210%;
  line-height: 170%;
  font-weight: 700;
  color: white;
  text-align: center;
  text-transform: uppercase;
}

/* Horizon footer--dont use */
/* .first{
  border-top-left-radius:50%;
  border-top-right-radius:50%;
   background: radial-gradient(120% 120px at 50% -30px, #eee9e9 75%, transparent 75%);
} */


.form {
  /* border-radius: 2em; */
  /* background-color: white; */
  opacity: 0.6;
  padding: 2em 1em;
  height: 33em;
}

.form button {
  background-color:#95a5a6 ;
  font-size: 1.5em;
}



/* End Contact Form */

/*  Start Footer CSS */

footer {
  background: #6991AC;
  width: 100%;
  overflow: auto;
}

.icon-text {
  width: 100;
  margin: 0 auto;
}
.icon-text-icon {
  float: left;
  width: 20%;
  padding: 4%;
}

.icon-text-text {
  width: 64%;
  float: left;
  padding: 4% 4% 2% 0%;
}

.footer-nav {
  text-align: right;
}
.footer-nav a {
  font-size: 160%;
  color: #C3D7DF;
  font-weight: 300;
}
.footer-nav a:hover {
  color: #F5F5F5;
}
.social {
  list-style-type: none;
  text-align: center;
}

.social li {
  display: inline;
}
.social i {
  font-size: 380%;
  margin: 1%;
  padding: 5% 5% 5% 4%;
  color: #C3D7DF;
}

.social i:hover {
  color: #F5F5F5;
}
footer.second {
  border-top: 1px solid #AADCD2;
  background-color: #544B59;
  max-height: 50px;
  text-align: center;
  margin: 0%;
}
footer.second p {
  padding: 5px 0 9px 0;
  text-align: center;
  color: #F5F5F5;
  font-size: 160%;
  line-height: 155%;
}
/*  End Footer CSS */


/*                   MEDIA                 */
@media screen and (max-width: 768px) {
  p {
    font-size: 130%;
    text-align: center;
  }
  h3 {
    font-size: 150%;
  }
  header {
    height: 100px;
    position: relative;
  }

  #logo {
    margin: 15px 0 20px -25px;
    background: url() no-repeat center;
  }
  #menu-icon {
    display: inline-block;
    width: 70px;
    height: 70px;
    position: absolute;
  }
  nav:hover ul {
    display: block;
  }
  #profile {
    margin: 0 auto;
    width: 45%;
    height: auto;
    padding: 5%;
    opacity: .85;
  }

  nav ul ,nav:active ul {
    display: none;
    z-index: 1000;
    position: absolute;
    padding: 20px;
    background: #F5F5F5;
    border: 1px solid #A5BDCD;
    right: 20px;
    width: 50%;
    border-radius: 3px 0 3px 3px;
    opacity: .95;
  }
  nav li {
    text-align: center;
    width: 100%;
  }
  nav:active ul {
  display: block;
   }﻿
  .one-third {
    float: left;
    width: 100%;
  }
  .icon-wrap {
    height: 80px;
    width: 80px;
    margin-top: 3%;
  }
  .icon-wrap i {
    font-size: 250%;
    padding-top: 27%
  }
  .left-col {
    width: 100%;
    padding: 0;
  }
  .sidebar {
    width: 100%;
  }
  .one-third-padding {
    width: 98%;
    margin: 0%;
    padding: 1%;
  }
  .one-third-padding a {
    font-size: 175%;
    line-height: 155%;
    font-weight: 500;
    color: white;
    text-align: center;
    text-transform: uppercase;
    padding-left: 30%;
  }
  .icon-text-icon {
    width: 100%;
    padding: 0 0 2% 0 ;
  }
  .icon-text-text {
    width: 100%;
    padding: 2% 0 0 0;
    font-size: 80%;
  }
  .footer-nav {
    text-align: center;
    padding-top: 5%;
  }
  .footer-nav li {
    padding: 1%;
  }

  .footer-nav a {
    font-size: 145%;
  }

  .social i {
    font-size: 180%;
  }

}

